name:                liquid-base
version:             4.8.0.0
synopsis:            LiquidHaskell specifications for the `base` package
homepage:            https://github.com/spinda/liquid-base
license:             BSD3
license-file:        LICENSE
author:              Michael Smith
maintainer:          michael@diglumi.com
category:            LiquidHaskell
build-type:          Custom
cabal-version:       >=1.10

library
  exposed:             False
  exposed-modules:     Liquid.Prelude,
                       Liquid.GHC.Base,
                       Liquid.GHC.Num,
                       Liquid.GHC.Real
  build-depends:       base >=4.8 && <4.9,
                       ghc-prim >=0.4 && <0.5,
                       liquidhaskell,
                       liquid-ghc-prim
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fplugin=LiquidHaskell.Plugin
                       -fplugin-opt=LiquidHaskell.Plugin:no-base-specs

